...
                            <constraint firstItem="fcb-qI-hng" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="b6F-h9-5y7"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="n0c-Oy-hUh" secondAttribute="bottom" id="hAh-q0-Nx7"/>
                            <constraint firstItem="fcb-qI-hng" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m1b-e1-uWH"/>
                            <constraint firstAttribute="trailing" secondItem="n0c-Oy-hUh" secondAttribute="trailing" id="xz4-u5-8wF"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Users" id="gu9-vO-HgK"/>
                    <connections>
                        <outlet property="activityIndicator" destination="fcb-qI-hng" id="v96-tj-WtH"/>
                        <outlet property="tableView" destination="n0c-Oy-hUh" id="WvI-qB-5AY"/>
                        <segue destination="ELf-1q-Nj6" kind="show" identifier="loadUser" id="z2f-ZB-aY1"/>
                    </connections>
                </viewController>
...
